main.tf
provider "aws" {
    region = "eu-west-2"
}

#1. Create VPC

resource "aws_vpc" "task_vpc"{
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = "produc-vpc"
    }
}

#2. Create Internet Gateway

resource "aws_internet_gateway" "task_gw" {
  vpc_id = aws_vpc.task_vpc.id

  tags = {
    Name = "produc-gw"
  }
}


#3. Create Custom Route Table

resource "aws_route_table" "task_rt" {
  vpc_id = aws_vpc.task_vpc.id

  route {
      #All traffic allow
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.task_gw.id
  }

  tags = {
    Name = "product-rt"
  }
}

#4. Create a Subnet

resource "aws_subnet" "task_subnet1" {
  vpc_id            = aws_vpc.task_vpc.id
  cidr_block        = var.subnet_prefix
  availability_zone = "eu-west-2a"

  tags = {
    Name = "product_sub"
  }
}
# Variable use

variable "subnet_prefix"{
  description = "cidr block for the subnet"
  #default 
  #type
}

#5. Associate subnet with Route Table
resource "aws_route_table_association" "task_rt_a" {
  subnet_id      = aws_subnet.task_subnet1.id
  route_table_id = aws_route_table.task_rt.id
}

#6. Create Security Group to allow port 22, 80, 443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.task_vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

#7. Create a network interface with an ip in subnet that was created in step 4

resource "aws_network_interface" "web_server_nic" {
  subnet_id       = aws_subnet.task_subnet1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

#8. Assign an elastic IP to the network interface created in step 7

resource "aws_eip" "eip_one" {
  vpc                       = true
  network_interface         = aws_network_interface.web_server_nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.task_gw]
}

# Show in consol the information requested
output "server_public_ip"{
  value = aws_eip.eip_one.public_ip
}

#9. Create Ubuntu server and install/enable apache 2

resource "aws_instance" "web_server_instance"{
    ami                 = "ami-0015a39e4b7c0966f"
    instance_type       = "t2.micro"
    availability_zone   = "eu-west-2a"
    key_name            = "xxxxx-key"

    network_interface {
      device_index          = 0
      network_interface_id  = aws_network_interface.web_server_nic.id
    } 

    user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your first web server > /var/www/html/index.html'
                EOF

    tags ={
        name = "Web_server"
    }
}
